<resources>
    <string name="app_name">androidChillflix</string>
    <string name="search_movies_hint">Search Movies...</string>
    <string name="home_icon_text">home</string>
    <string name="categories_icon_text">categories</string>
    <string name="remove_from_watchlist">- Remove from Watchlist</string>
    <string name="min">" min"</string>
    <string name="genres">"Genres: "</string>
    <string name="add_to_watchlist">+ Add to Watchlist</string>
    <string name="search_results_for">Search Results for \"</string>
    <string name="no_title_available">No Title Available</string>
    <string name="category_name">Category Name</string>
    <string name="promoted_category">Promoted Category</string>
    <string name="add_category">Add Category</string>
    <string name="add_movie">Add Movie</string>
    <string name="select_trailer_file">Select Trailer File</string>
    <string name="enter_trailer_url">Enter Trailer URL</string>
    <string name="trailer">Trailer</string>
    <string name="select_backdrop_file">Select Backdrop File</string>
    <string name="enter_backdrop_path_url">Enter Backdrop Path URL</string>
    <string name="backdrop_path">Backdrop Path</string>
    <string name="select_poster_file">Select Poster File</string>
    <string name="enter_poster_path_url">Enter Poster Path URL</string>
    <string name="poster_path">Poster Path</string>
    <string name="enter_runtime">Enter Runtime</string>
    <string name="runtime_minutes">Runtime (minutes)</string>
    <string name="e_g_action_comedy">e.g., Action,Comedy</string>
    <string name="genres_comma_separated">Genres (comma separated)</string>
    <string name="enter_overview">Enter Overview</string>
    <string name="overview">Overview</string>
    <string name="enter_movie_title">Enter Movie Title</string>
    <string name="movie_title">Movie Title</string>
    <string name="add_a_new_movie">Add a New Movie</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="select_category_to_delete">Select Category to Delete</string>
    <string name="select_category">Select Category</string>
    <string name="update_category">Update Category</string>
    <string name="select_movie">Select Movie</string>
    <string name="update_movie">Update Movie</string>
    <string name="title">Title</string>
    <string name="duration">Duration:</string>
    <string name="overview_">overview:</string>
    <string name="play">Play</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="no_results_found">No results found</string>
    <string name="search_results">Search Results</string>
    <string name="app_logo">App Logo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name:</string>
    <string name="new_password">New Password:</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="upload_custom_avatar">Upload Custom Avatar:</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="choose_file">Choose File</string>
    <string name="name_">name</string>
    <string name="movies_tv_shows_and_more">Movies, TV Shows, and More</string>
    <string name="watch_anywhere_anytime_without_limits">Watch anywhere, anytime, without limits.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="get_started">Get Started</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_to_chillflix">New to ChillFlix?</string>
    <string name="sign_up_now">Sign Up now</string>
    <string name="password_verification">Password Verification</string>
    <string name="select_your_avatar">Select your avatar:</string>
    <string name="avatar_1">Avatar 1</string>
    <string name="avatar_2">Avatar 2</string>
    <string name="avatar_3">Avatar 3</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_movie_to_delete">Select Movie to Delete</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="no_recommended_movies_found">No recommended movies found</string>
</resources>