<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/popup_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tvAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp" />

    </LinearLayout>
</ScrollView>
